Improve AJAX js

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                         </fieldset>
                     </div>
                 </form>
+                <span id="conv-result"></span>
             </div>
         </div>
         <!-- End -->
