--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     {% block custom_css %}{% endblock %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-{#    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">#}
-{#    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">#}
-{#    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">#}
-{#    <link rel="manifest" href="/site.webmanifest">#}
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
     <title>{% block title %}Convert Yandex.Market xls to Goods.ru xml{% endblock %}</title>
 </head>
 <body>
-<div>
+<div id="fl-message">
 {% with messages = get_flashed_messages(with_categories=true) %}
     <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
     {% if messages %}
