Fix JS ajaxs issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <title>{% block title %}Convert Yandex.Market xls to Goods.ru xml{% endblock %}</title>
 </head>
 <body>
-<div id="fl-message">
+<div id="status-message">
 {% with messages = get_flashed_messages(with_categories=true) %}
     <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
     {% if messages %}
