--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,10 @@
                         </fieldset>
                     </div>
                 </form>
-                <span id="conv-result"></span>
+                <div>
+                    <div id="conv-result"></div>
+                    <div id="download-links"></div>
+                </div>
             </div>
         </div>
         <!-- End -->
