Draft for the download windows utility link.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{#    <p>Скачать<a href="https://github.com/gearbox/yandex2goods/releases/download/0.92/xls_to_xml.exe">Конвертер для Windows</a></p>#}
     <h1>Яндекс.Маркет XLS в XML в формате Goods.ru</h1>
     <p>Конвертируем XLS файл, выгруженный из Яндекс.Маркет в XML формата Goods.ru.</p>
     <p>У нас все просто, как <i>1, 2, 3</i>:</p>
