--- a/webapp/auth/templates/users.html
+++ b/webapp/auth/templates/users.html
@@ -7,6 +7,7 @@
     {% for user in users %}
     <ul>
         <li>User email: {{ user.email }}</li>
+        <li>User password: {{ user.password }}</li>
         <li>Created: {{ user.created }}</li>
         <li>Active: {{ user.active }}</li>
         <li>Admin: {{ user.admin }}</li>
