--- a/webapp/profile/templates/profile.html
+++ b/webapp/profile/templates/profile.html
@@ -60,6 +60,10 @@
                     {{ form.shop_currency(class="form-control", placeholder="") }}
                 </div>
                 <div class="form-group">
+                    {{ form.currency_rate.label }}
+                    {{ form.currency_rate(class="form-control", placeholder="") }}
+                </div>
+                <div class="form-group">
                     {{ form.shop_outlet.label }}
                     {{ form.shop_outlet(class="form-control", placeholder="") }}
                 </div>
