--- a/webapp/auth/templates/signup.html
+++ b/webapp/auth/templates/signup.html
@@ -6,7 +6,7 @@
     <h1>Зарегистрируйтесь</h1>
     <p>Пожалуйста, зарегистрируйтесь для доступа к функциям сервиса.</p>
 
-{#    <div class="form-group">#}
+    <div class="form-group">
         <form method="POST" action="/signup">
             {{ form.csrf_token }}
             <fieldset>
@@ -24,6 +24,13 @@
             <div class="form-group" style="position: relative">
                 {{ form.password.label }}
                 {{ form.password(class="form-control") }}
+                {% if form.password.errors %}
+                    <ul class="invalid-tooltip" style="display: block;">
+                        {% for error in form.password.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </div>
             <div class="form-group" style="position: relative">
                 {{ form.password_confirm.label }}
@@ -39,5 +46,5 @@
                 {{ form.submit(class="btn btn-primary mb-2") }}
             </fieldset>
         </form>
-{#    </div>#}
+    </div>
 {% endblock %}
