Flask-Admin added

--- a/webapp/profile/templates/profile.html
+++ b/webapp/profile/templates/profile.html
@@ -87,8 +87,8 @@
 {#                       placeholder="https://www.chudesa-sveta.ru" required>#}
 {#                <label for="shop-currency">Принимаемая валюта</label>#}
 {#                <input class="form-control" id="shop-currency" name="shop-currency" type="text">#}
-{#                <label for="shop-outlet">ID Склада</label>#}
-{#                <input class="form-control" id="shop-outlet" name="shop-outlet" type="text">#}
+{#                <label for="shop-outlet_id">ID Склада</label>#}
+{#                <input class="form-control" id="shop-outlet_id" name="shop-outlet_id" type="text">#}
 {#                <p></p>#}
 {#                <button class="btn btn-primary mb-2" id="confirm-profile-info" type="button">Сохранить</button>#}
 {#            </fieldset>#}
